bin/debug/log.txt
In file included from main.cpp:1:
In file included from ./generic/basic/interface.hpp:164:
In file included from /opt/homebrew/include/boost/compute.hpp:14:
In file included from /opt/homebrew/include/boost/compute/algorithm.hpp:18:
In file included from /opt/homebrew/include/boost/compute/algorithm/accumulate.hpp:20:
In file included from /opt/homebrew/include/boost/compute/algorithm/reduce.hpp:22:
In file included from /opt/homebrew/include/boost/compute/container/array.hpp:23:
In file included from /opt/homebrew/include/boost/compute/algorithm/fill.hpp:25:
In file included from /opt/homebrew/include/boost/compute/algorithm/copy.hpp:26:
[1m/opt/homebrew/include/boost/compute/algorithm/detail/copy_on_device.hpp:48:17: [0m[0;1;31merror: [0m[1mno viable overloaded operator[] for type 'ap::detail::array_const_iterator<int, 1, ap::opencl>'[0m
   48 |                 first[k.var<uint_>([0;32m"index"[0m)] << [0;32m";\n"[0m <<[0m
      | [0;1;32m                ^~~~~ ~~~~~~~~~~~~~~~~~~~~~
[0m[1m/opt/homebrew/include/boost/compute/algorithm/detail/copy_on_device.hpp:114:16: [0m[0;1;36mnote: [0min instantiation of function template specialization 'boost::compute::detail::copy_on_device_cpu<ap::detail::array_const_iterator<int, 1, ap::opencl>, ap::opencl::pointer<int>>' requested here[0m
  114 |         [0;34mreturn[0m copy_on_device_cpu(first, result, count, queue, events);[0m
      | [0;1;32m               ^
[0m[1m/opt/homebrew/include/boost/compute/algorithm/detail/copy_on_device.hpp:126:5: [0m[0;1;36mnote: [0min instantiation of function template specialization 'boost::compute::detail::dispatch_copy_on_device<ap::detail::array_const_iterator<int, 1, ap::opencl>, ap::opencl::pointer<int>>' requested here[0m
  126 |     dispatch_copy_on_device(first, last, result, queue, events);[0m
      | [0;1;32m    ^
[0m[1m/opt/homebrew/include/boost/compute/algorithm/copy.hpp:675:12: [0m[0;1;36mnote: [0min instantiation of function template specialization 'boost::compute::detail::copy_on_device<ap::detail::array_const_iterator<int, 1, ap::opencl>, ap::opencl::pointer<int>>' requested here[0m
  675 |     [0;34mreturn[0m copy_on_device(first, last, result, queue, events);[0m
      | [0;1;32m           ^
[0m[1m/opt/homebrew/include/boost/compute/algorithm/copy.hpp:860:20: [0m[0;1;36mnote: [0min instantiation of function template specialization 'boost::compute::detail::dispatch_copy<ap::detail::array_const_iterator<int, 1, ap::opencl>, ap::opencl::pointer<int>>' requested here[0m
  860 |     [0;34mreturn[0m detail::dispatch_copy(first, last, result, queue, events);[0m
      | [0;1;32m                   ^
[0m[1m./generic/basic/device/opencl/opencl.hpp:80:155: [0m[0;1;36mnote: [0min instantiation of function template specialization 'boost::compute::copy<ap::detail::array_const_iterator<int, 1, ap::opencl>, ap::opencl::pointer<int>>' requested here[0m
   80 |             [0;34mstatic[0m [0;34mdecltype[0m([0;34mauto[0m) copy                              ( [0;34mauto[0m&&... args ) { let scope = detail::opencl_queue_scope(); [0;34mreturn[0m boost::compute::copy                    (std::forward<[0;34mdecltype[0m(args)>(args)..., scope.command_queue()); }[0m
      | [0;1;32m                                                                                                                                                          ^
[0m[1m./specific/container/array/array_base/array_iterator.hpp:125:33: [0m[0;1;36mnote: [0mcandidate function not viable: no known conversion from 'detail::meta_kernel_variable<unsigned int>' to 'difference_type' (aka 'int') for 1st argument[0m
  125 |             [0;34mconstexpr[0m reference [0;34moperator[0m []   ( difference_type t ) [0;34mconst[0m { [0;34mreturn[0m  iter[t]; }[0m
      | [0;1;32m                                ^               ~~~~~~~~~~~~~~~~~
[0mIn file included from main.cpp:1:
In file included from ./generic/basic/interface.hpp:164:
In file included from /opt/homebrew/include/boost/compute.hpp:14:
In file included from /opt/homebrew/include/boost/compute/algorithm.hpp:18:
In file included from /opt/homebrew/include/boost/compute/algorithm/accumulate.hpp:20:
In file included from /opt/homebrew/include/boost/compute/algorithm/reduce.hpp:22:
In file included from /opt/homebrew/include/boost/compute/container/array.hpp:23:
In file included from /opt/homebrew/include/boost/compute/algorithm/fill.hpp:25:
In file included from /opt/homebrew/include/boost/compute/algorithm/copy.hpp:26:
[1m/opt/homebrew/include/boost/compute/algorithm/detail/copy_on_device.hpp:84:21: [0m[0;1;31merror: [0m[1mno viable overloaded operator[] for type 'ap::detail::array_const_iterator<int, 1, ap::opencl>'[0m
   84 |                     first[k.var<uint_>([0;32m"index"[0m)] << [0;32m";\n"[0m <<[0m
      | [0;1;32m                    ^~~~~ ~~~~~~~~~~~~~~~~~~~~~
[0m[1m/opt/homebrew/include/boost/compute/algorithm/detail/copy_on_device.hpp:116:12: [0m[0;1;36mnote: [0min instantiation of function template specialization 'boost::compute::detail::copy_on_device_gpu<ap::detail::array_const_iterator<int, 1, ap::opencl>, ap::opencl::pointer<int>>' requested here[0m
  116 |     [0;34mreturn[0m copy_on_device_gpu(first, result, count, queue, events);[0m
      | [0;1;32m           ^
[0m[1m/opt/homebrew/include/boost/compute/algorithm/detail/copy_on_device.hpp:126:5: [0m[0;1;36mnote: [0min instantiation of function template specialization 'boost::compute::detail::dispatch_copy_on_device<ap::detail::array_const_iterator<int, 1, ap::opencl>, ap::opencl::pointer<int>>' requested here[0m
  126 |     dispatch_copy_on_device(first, last, result, queue, events);[0m
      | [0;1;32m    ^
[0m[1m/opt/homebrew/include/boost/compute/algorithm/copy.hpp:675:12: [0m[0;1;36mnote: [0min instantiation of function template specialization 'boost::compute::detail::copy_on_device<ap::detail::array_const_iterator<int, 1, ap::opencl>, ap::opencl::pointer<int>>' requested here[0m
  675 |     [0;34mreturn[0m copy_on_device(first, last, result, queue, events);[0m
      | [0;1;32m           ^
[0m[1m/opt/homebrew/include/boost/compute/algorithm/copy.hpp:860:20: [0m[0;1;36mnote: [0min instantiation of function template specialization 'boost::compute::detail::dispatch_copy<ap::detail::array_const_iterator<int, 1, ap::opencl>, ap::opencl::pointer<int>>' requested here[0m
  860 |     [0;34mreturn[0m detail::dispatch_copy(first, last, result, queue, events);[0m
      | [0;1;32m                   ^
[0m[1m./generic/basic/device/opencl/opencl.hpp:80:155: [0m[0;1;36mnote: [0min instantiation of function template specialization 'boost::compute::copy<ap::detail::array_const_iterator<int, 1, ap::opencl>, ap::opencl::pointer<int>>' requested here[0m
   80 |             [0;34mstatic[0m [0;34mdecltype[0m([0;34mauto[0m) copy                              ( [0;34mauto[0m&&... args ) { let scope = detail::opencl_queue_scope(); [0;34mreturn[0m boost::compute::copy                    (std::forward<[0;34mdecltype[0m(args)>(args)..., scope.command_queue()); }[0m
      | [0;1;32m                                                                                                                                                          ^
[0m[1m./specific/container/array/array_base/array_iterator.hpp:125:33: [0m[0;1;36mnote: [0mcandidate function not viable: no known conversion from 'detail::meta_kernel_variable<unsigned int>' to 'difference_type' (aka 'int') for 1st argument[0m
  125 |             [0;34mconstexpr[0m reference [0;34moperator[0m []   ( difference_type t ) [0;34mconst[0m { [0;34mreturn[0m  iter[t]; }[0m
      | [0;1;32m                                ^               ~~~~~~~~~~~~~~~~~
[0m2 errors generated.
